# genro-data-api

./: CHANGELOG.md  CLAUDE.md  NOTICE  README.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml  tests.yml
contrib/asgi/: pyproject.toml
contrib/asgi/src/genro_data_api_asgi/: __init__.py  odata_application.py
contrib/wsgi/: pyproject.toml
contrib/wsgi/src/genro_data_api_wsgi/: __init__.py  wsgi_handler.py
docs/: architecture.md  conf.py  index.md
src/genro_data_api/: __init__.py
src/genro_data_api/core/: __init__.py  backend.py  type_map.py
src/genro_data_api/graphql/: __init__.py  request_handler.py  response.py  schema_generator.py
src/genro_data_api/odata/: __init__.py  apply_parser.py  csdl_renderer.py  expand_resolver.py  filter_parser.py  request_handler.py  response.py  skiptoken.py
tests/: __init__.py  conftest.py  test_apply_parser.py  test_backend_protocol.py  test_csdl_renderer.py  test_expand_resolver.py  test_filter_parser.py  test_graphql_handler.py  test_graphql_response.py  test_graphql_schema.py  test_request_handler.py  test_response.py  test_skiptoken.py  test_type_map.py
